[CI] Adding functionality to RenderWidgetHostViewAura::CopyFromSurface to capture popups.

Previous to this CL, the RenderWidgetHostViewAura::CopyFromSurface function would capture
only the main window contents. It would ignore any secondary child popup screens that
were generated as a result of many popup operations, for example calendar pickers, selection popups,
suggestion pickers, etc. With this CL, those popup screens are detected, captured, and
overlaid on top of the main window capture.

Note that in the process of implementing this, I fixed a bug in
RenderWidgetHostViewAura::GetBoundsInRootWindow(), for the Windows case. Previous to this CL,
for Windows, when legacy HWNDs are not in use (UsesNativeWindowFrame() returns false), the
function would return locations in units of DIPs divided by scale factor. It should be returning
DIPs. I moved the conversion up into the if{} block. It seems that no current test catches this
issue, but once --enable-display-compositor-pixel-dumps becomes a default flag, the existing
layout tests, under virtual/scalefactorXyz, should serve to monitor this code for regressions.

Bug: 875962, 667551

Change-Id: Iefc9bfd7798b3dfabb3a28eb46009fa703c0fca0
Reviewed-on: https://chromium-review.googlesource.com/1192330
Commit-Queue: Mason Freed <masonfreed@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589975}
Former-commit-id: e1879b6e09f4caeb6af3d2ca2c7e0da01973c316